--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
